# quesadilla

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: develop_docs.yml  release_docs.yml  run_tests.yaml
docs/: examples.md  index.md  tutorial.md
example/: INCAR  README.md  generate_kpoints.py  job.sh  plot.ipynb  prepare_file_tree.sh  run.sh
examples/: example.ipynb  generate_files.sh  job.sh  prepare_file_tree.sh  run.sh  test.ipynb
quesadilla/: cli.py  dynmat.py  supercells.py  symmetries.py  utils.py
quesadilla/FModules_QE/: cryst_to_cart.f90  eqvect.f90  error_handler.f90  invmat.f90  io.f90  io_global.f90  little_group.f90  q2qstar_ph.f90  rotate_and_add_dyn.f90  sgam_ph.f90  smallgq.f90  star_q.f90  symm_base.f90  symmetrize_fcq.f90  transformations.f90  trntnsc.f90
quesadilla/FModules_QEv2/: cell_base.f90  invmat.f90  ions_base.f90  lr_symm_base.f90  noncol.f90  q2qstar.f90  q2qstar_ph.f90  smallgq.f90  symm_base.f90
tests/: test_phonons.py  test_supercells.py
tests/data/CsCl/: PPOSCAR  phonopy-1.yaml  phonopy-10.yaml  phonopy-2.yaml  phonopy-3.yaml  phonopy-4.yaml  phonopy-5.yaml  phonopy-6.yaml  phonopy-7.yaml  phonopy-8.yaml  phonopy-9.yaml  phonopy-diag.yaml  phonopy.yaml  quesadilla.toml
tests/data/CsCl/sc-001/: FORCE_SETS  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-001/disp-001/: POSCAR  vasprun.xml
tests/data/CsCl/sc-001/disp-002/: POSCAR  vasprun.xml
tests/data/CsCl/sc-002/: FORCE_SETS  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-002/disp-001/: POSCAR  vasprun.xml
tests/data/CsCl/sc-003/: FORCE_SETS  POSCAR-001  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-004/: FORCE_SETS  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-005/: FORCE_SETS  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-006/: FORCE_SETS  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/CsCl/sc-1/: phonopy.yaml
tests/data/CsCl/sc-10/: phonopy.yaml
tests/data/CsCl/sc-2/: phonopy.yaml
tests/data/CsCl/sc-3/: phonopy.yaml
tests/data/CsCl/sc-4/: phonopy.yaml
tests/data/CsCl/sc-5/: phonopy.yaml
tests/data/CsCl/sc-6/: phonopy.yaml
tests/data/CsCl/sc-7/: phonopy.yaml
tests/data/CsCl/sc-9/: phonopy.yaml
tests/data/Si/: POSCAR  PPOSCAR  phonopy-1.yaml  phonopy-2.yaml  phonopy-3.yaml  phonopy-4.yaml  phonopy-5.yaml  phonopy-6.yaml  phonopy-7.yaml  phonopy-8.yaml  phonopy-diag-2.yaml  phonopy.yaml  quesadilla.toml
tests/data/Si/sc-001/: FORCE_SETS  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/Si/sc-002/: FORCE_SETS  phonopy.yaml  phonopy_disp.yaml
tests/data/Si/sc-003/: FORCE_SETS  phonopy.yaml
tests/data/Si/sc-004/: FORCE_SETS  POSCAR-003  phonopy.yaml  phonopy_disp.yaml
tests/data/Si/sc-005/: POSCAR  POSCAR-001  POSCAR-002  phonopy.yaml
tests/data/Si/sc-1/: phonopy.yaml
tests/data/Si/sc-3/: phonopy.yaml
tests/data/Si/sc-4/: phonopy.yaml
tests/data/Si/sc-5/: phonopy.yaml
tests/data/Si/sc-6/: phonopy.yaml
tests/data/Si/sc-7/: phonopy.yaml
tests/data/Si_cli/: phonopy-diag.yaml  phonopy.yaml  quesadilla.toml
tests/data/Si_cli/sc-001/: POSCAR  POSCAR-001
tests/data/Si_cli/sc-002/: POSCAR  POSCAR-001
tests/data/Si_cli/sc-003/: POSCAR  phonopy_disp.yaml
tests/data/Si_cli/sc-004/: POSCAR  POSCAR-002  POSCAR-004
tests/data/Si_cli/sc-005/: FORCE_SETS  phonopy_disp.yaml
tests/data/hcp_He_28GPa/: POSCAR  phonopy-diag.yaml  phonopy.yaml  quesadilla.toml
tests/data/hcp_He_28GPa/sc-001/: FORCE_SETS  POSCAR  POSCAR-002  phonopy.yaml  phonopy_disp.yaml
tests/data/hcp_He_28GPa/sc-002/: FORCE_SETS  POSCAR  POSCAR-001  phonopy.yaml  phonopy_disp.yaml
tools/: run_f2py.py
v0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.1/examples/: index.html
v0.0.1/reference/SUMMARY/: index.html
v0.0.1/reference/quesadilla/: index.html
v0.0.1/reference/quesadilla/dynmat/: index.html
v0.0.1/reference/quesadilla/supercells/: index.html
v0.0.1/reference/quesadilla/symmetries/: index.html
v0.0.1/reference/quesadilla/utils/: index.html
v0.0.1/reference/tools/run_f2py/: index.html
v0.0.1/search/: search_index.json
v0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.2/reference/SUMMARY/: index.html
v0.0.2/reference/quesadilla/: index.html
v0.0.2/reference/quesadilla/cli/: index.html
v0.0.2/reference/quesadilla/dynmat/: index.html
v0.0.2/reference/quesadilla/supercells/: index.html
v0.0.2/reference/quesadilla/symmetries/: index.html
v0.0.2/reference/quesadilla/utils/: index.html
v0.0.2/reference/tools/run_f2py/: index.html
v0.0.2/search/: search_index.json
v0.0.2/tutorial/: index.html
v0.0.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.3/reference/SUMMARY/: index.html
v0.0.3/reference/example/generate_kpoints/: index.html
v0.0.3/reference/quesadilla/: index.html
v0.0.3/reference/quesadilla/cli/: index.html
v0.0.3/reference/quesadilla/dynmat/: index.html
v0.0.3/reference/quesadilla/supercells/: index.html
v0.0.3/reference/quesadilla/symmetries/: index.html
v0.0.3/reference/quesadilla/utils/: index.html
v0.0.3/reference/tools/run_f2py/: index.html
v0.0.3/search/: search_index.json
v0.0.3/tutorial/: index.html
(+49 files in other folders)
